Completed Angular Crash Course

--- a/first-ng-app/src/app/todos/todos.component.html
+++ b/first-ng-app/src/app/todos/todos.component.html
@@ -1,11 +1,24 @@
 <h3>Todos List</h3>
+<!-- old method, must import NgIf in ts
+<p *ngIf="!todoItems().length">Loading..</p> 
+-->
+
+@if (!todoItems().length){
+    <p>Loading...</p>
+}
+
+<form>
+    <label>Filter Todos</label>
+    <input 
+        name="searchTerm"
+        [(ngModel)]="searchTerm" 
+        placeholder="Search todos..." 
+    />
+</form>
 
 <ul class="todos">
-    @for (todo of todoItems(); track todo.id) {
-        <li class="todos__item">
-            <input id="todo-{{ todo.id }}" type="checkbox" [value]="todo.completed"/>
-            <label for="todo-{{ todo.id }}">{{ todo.title }}</label>            
-        </li>
+    @for (todo of todoItems() | filterTodos : searchTerm(); track todo.id) {
+        <app-todo-item (todoToggled)="updateTodoItem($event)" [todo]="todo"/>        
     }
 </ul>
 
